--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
 :root {
   --background: #000;
   --foreground: #171717;
+  --clr-prime1: #0379fc;
+  --clr-prime2: #22ffd7;
 }
 
 @theme inline {
@@ -33,7 +35,60 @@ body {
 
 /* mobile screen size => navs -> menuIcon */
 @media (max-width: 768px) {
-  .hamburger-menu { /*show navs*/
+  .hamburger-menu {
+    /*show navs*/
     display: flex;
-  }  
+  }
+}
+
+@layer components {
+  .section {
+    @apply py-20 px-6 max-w-6xl mx-auto
+  }
+  
+  .media-btn {
+    @apply w-8 h-8 flex items-center justify-center rounded-full hover:scale-105 transition-all
+  }
+  
+  .card {
+    @apply bg-[#0f0f0f] border border-white/5 rounded-xl p-5 shadow-lg shadow-black/20 hover:shadow-xl hover:shadow-black/30 transition duration-300 backdrop-blur-sm
+    hover:-translate-y-1;
+  }
+
+  .tech-badge {
+    @apply px-2 py-1 rounded-full bg-white/5 border border-white/10 text-sm text-[#2288ff] hover:bg-white/10 transition
+  }
+
+  .section-name {
+    @apply text-4xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#0379fc] to-[#22ffd7]
+  }
+
+  .project-btn {
+    @apply text-[#06b1ef] text-base
+  }
+
+  .project-card {
+    @apply bg-[#0f0f0f] border border-white/5 rounded-xl p-5 shadow-lg shadow-black/20 hover:shadow-xl hover:shadow-black/30 transition duration-300 backdrop-blur-sm
+    hover:-translate-y-1;
+  }
+
+  .project-badge {
+    @apply text-[#ffcb22] px-2 py-1 ml-2 rounded-md bg-[#ffcb22]/25 border border-white/10 text-sm text-[#ffcb22];
+  }
+
+  .timeline-dot {
+    @apply absolute -left-[35px] top-1 w-5 h-5 rounded-full bg-gradient-to-r from-[#0379fc] to-[#22ffd7]
+  }
+
+  .exp-heading {
+    @apply text-lg font-semibold text-white
+  }
+
+  .exp-time {
+    @apply text-sm text-gray-400 mb-2
+  }
+
+  .exp-details {
+    @apply text-gray-300 text-sm list-disc ml-4 space-y-1
+  }
 }
