--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,7 @@ body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
 
 .hamburger-menu {
@@ -80,7 +81,7 @@ body {
   }
 
   .exp-heading {
-    @apply text-lg font-semibold text-white
+    @apply text-lg font-bold text-white
   }
 
   .exp-time {
@@ -88,6 +89,6 @@ body {
   }
 
   .exp-details {
-    @apply text-gray-300 text-sm list-disc ml-4 space-y-1
+    @apply text-gray-300 text-sm md:text-lg list-disc ml-4 space-y-1
   }
 }
